# iiif_service_maps

./: .gitignore  README.md  current_sheet.csv  pyproject.toml
iiif_service_maps/: __init__.py  generate.py
iiif_service_maps/manifest/: manifest.py
