[tool.poetry]
name = "iiif_service_maps"
version = "0.1.0"
description = "A Tool to Help Generate Manifests for Service Maps Demo"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
iiif-prezi3 = "^1.2.1"
click = "^8.1.7"
httpx = "^0.27.2"

[tool.poetry.scripts]
service-map = "iiif_service_maps.generate:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
